# secdev-project

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  compose.yaml  index.html  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: database.py  entities.py  init_users.py  main.py
docs/adr/: ADR-001-errors-in-rfc-7807.md  ADR-002-rate-limiting.md  ADR-003-normalization-of-datetimes.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
tests/: conftest.py  test_authorization.py  test_errors.py  test_rate_limit.py  test_rate_limiting.py  test_sql_injection.py  test_suggestions.py
